--- a/src/app/main/add-task/add-task.component.scss
+++ b/src/app/main/add-task/add-task.component.scss
@@ -1,5 +1,11 @@
 
 @import "src/@fuse/scss/fuse";
+@import '~@angular/material/theming';
+
+$custom-typography: mat-typography-config(
+  $font-family: 'Muli'
+);
+@include mat-core($custom-typography);
 
 .page-layout {
 
@@ -13,31 +19,42 @@
         background: #1A237E;
         background: linear-gradient(to right, #0E2A3B 0%, #34306B 100%);
         text-align: center;
-    
+
         @include media-breakpoint('xs') {
-          height: 240px;
-          padding: 16px;
+            height: 240px;
+            padding: 16px;
         }
-    
-    
+
+
         h1 {
-          color: white;
-          font-size: 40px;
-          font-weight: 300;
-          letter-spacing: 0.01em;
-          text-align: center;
-          margin-top: 0;
-          margin-bottom: 0px;
-    
-          @include media-breakpoint-down('xs') {
+            color: white;
+            font-size: 40px;
+            font-weight: 300;
+            letter-spacing: 0.01em;
+            text-align: center;
+            margin-top: 0;
+            margin-bottom: 0px;
+
+            @include media-breakpoint-down('xs') {
             font-size: 24px;
-          }
+            }
         }
-      }
-
-
-
     }
+
+    .mat-column-actions {
+        flex: 0 0 55px;
+    }
+
+    .mat-column-image {
+        flex: 0 0 100px;
+    }
+
+    .mat-column-name {
+        font-size: 20px;
+    }
+
+
+}
 
 
 
