--- a/src/app/main/add-task/add-task.component.html
+++ b/src/app/main/add-task/add-task.component.html
@@ -8,8 +8,6 @@
 
     <br>
 
-
-        <!-- <mat-vertical-stepper class="mat-elevation-z4" [linear]="true"> -->
     <div fxLayout="row">
 
         <div fxFlex="10"></div>
@@ -212,7 +210,7 @@
                             <button class="mr-8" mat-raised-button matStepperPrevious type="button" color="accent">
                                 Zurück
                             </button>
-                            <button mat-raised-button matStepperNext type="button" color="accent">
+                            <button mat-raised-button matStepperNext type="button" color="accent" (click)="resetAbleitungStates()">
                                 Weiter
                             </button>
                         </div>
@@ -225,7 +223,7 @@
 
                     <ng-template matStepLabel>Kompetenzen</ng-template>
 
-                    <div *ngIf="displayCompetenceStep" fxLayout="column"  style="height: 200px">
+                    <div *ngIf="displayFirstCompetenceStep" fxLayout="column"  style="height: 200px">
 
                         <div style="padding-bottom: 10px">
                             Kompetenzen können aufgrund der eingegebenen Daten abgeleitet oder manuell festgelegt werden.
@@ -254,51 +252,163 @@
 
                         </div>
 
-
-                        <div class="pt-24" fxLayout="row" fxLayoutAlign="start start" fxFlex="50">
+                        <div class="pt-24" fxLayout="row" fxLayoutAlign="start start">
                             <button class="mr-8" mat-raised-button type="button" color="accent">
                                 Abbrechen
                             </button>
                             <button class="mr-8" mat-raised-button matStepperPrevious type="button" color="accent">
                                 Zurück
                             </button>
-                            <button mat-raised-button matStepperNext type="button" color="accent">
+                            <button mat-raised-button matStepperNext type="button" color="accent" disabled>
                                 Weiter
                             </button>
                         </div>
 
-                    </div>
 
-                    <div *ngIf="!displayCompetenceStep" style="height: 200px">
                         
-                        
-
-                        <mat-spinner></mat-spinner>
-                        Ableitung erfolgt - kann etwas dauern
 
                     </div>
 
+                    <div *ngIf="displayAbleitungStep" style="height: 200px" fxLayout="column" fxLayoutAlign="space-between center">
+                        
+                        <div></div>
+                    
+                        <div fxLayout="row" fxLayoutAlign="space-between center">
+                            <div></div>
+
+                            <mat-spinner></mat-spinner>
+                            
+                            <div></div>
+
+                        </div>
+
+                        <div></div>
+
+                        <div fxLayout="row" fxLayoutAlign="space-between center">
+                            <div></div>
+                            <div>
+                                Ableitung erfolgt - kann etwas dauern
+                            </div> 
+                            <div></div>
+                        </div>
+
+                        <div></div>
+                    </div>
+
+                    <div *ngIf="displayAbleitungFinishedStep" style="height: auto">
+                        <div fxLayout="row" fxLayoutAlign="space-between center">
+                            <!-- <div></div> -->
+                            <div class="h2 m-16" fxLayout="row" fxLayoutAlign="start center">
+                                <mat-icon>check</mat-icon>    
+                                <div>&nbsp; &ndash; &nbsp;</div>
+                                <div>Kompetenzen wurden abgeleitet</div>
+                            
+                            </div>
+                            <!-- <div></div> -->
+                        </div>  
+
+                        
+
+                        <div fxLayout="row">
+
+                            <div fxFlex="5"></div>
+
+                            <div fxFlex="45">
+                                 <!-- fxLayout="row" fxFlex="70"> -->
+                                <!-- <div fxFlex ="5"></div> -->
+
+                                <!-- <mat-table #table2 [dataSource]="dataSourceCompetences" fxFlex="45"> -->
+
+                                <mat-table #table2 [dataSource]="dataSourceCompetences">
+
+                                    <ng-container matColumnDef="competenceName">
+                                        <mat-header-cell *matHeaderCellDef></mat-header-cell>
+                                        <mat-cell *matCellDef="let entry">
+                                            {{entry.competence}}
+                                        </mat-cell>
+                                    </ng-container>
+
+                                    <ng-container matColumnDef="actions">
+                                        <mat-header-cell *matHeaderCellDef></mat-header-cell>
+                                        <mat-cell *matCellDef="let entry">
+                                            <mat-checkbox checked=true></mat-checkbox>
+                                        </mat-cell>
+                                    </ng-container>
+                                
+                                    <!-- <mat-header-row *matHeaderRowDef="displayedColumnsCompetences"></mat-header-row> -->
+                                    <mat-row *matRowDef="let row; columns: displayedColumnsCompetences;"></mat-row>
+                                </mat-table>
+                                
+                                <!-- <div fxFlex="40"></div> -->
+
+                            </div>
+
+                            <div fxFlex="5"></div>
+
+                            <div fxFlex="40">
+                                <div>Weitere Suchen:</div>
+                                <br>
+                                <mat-form-field appearance="outline" style="width: 100%"> 
+                                    <input matInput placeholder="Suchen">
+                                </mat-form-field>
+                            </div>
+
+                            <div fxFlex="5"></div>
+  
+                        </div>
+
+                        <div class="pt-24" fxLayout="row" fxLayoutAlign="start start">
+                            <button class="mr-8" mat-raised-button type="button" color="accent"  (click)="resetAbleitungStates()">
+                                Abbrechen
+                            </button>
+                            <button class="mr-8" mat-raised-button matStepperPrevious type="button" color="accent">
+                                Zurück
+                            </button>
+                            <button mat-raised-button matStepperNext type="button" color="accent" >
+                                Weiter
+                            </button>
+                        </div>
+                        
+                    </div>
+                    
                 </mat-step>
 
                 <mat-step>
 
                     <ng-template matStepLabel>Fertig</ng-template>
 
-                    <div class="h2 m-16" fxLayout="row" fxLayoutAlign="center center">
-                        Thank your for filling out our form.
+                    <div *ngIf="!displayFinishedLoadingCircle" style="height: 200px" fxLayout="column" fxLayoutAlign="space-between none">
+
+                        <div class="h2 m-16" fxLayout="row" fxLayoutAlign="center center">
+                            Abgeschlossen &nbsp; &ndash; &nbsp; Aufgabe wird nach Klick auf Fertig erstellt.
+                        </div>
+
+                        <div class="pt-24" fxLayout="row" fxLayoutAlign="start start">
+                            <button class="mr-8" mat-raised-button type="button" color="accent">
+                                Abbrechen
+                            </button>
+                            <button class="mr-8" mat-raised-button matStepperPrevious type="button" color="accent">
+                                Zurück
+                            </button>
+                            <button mat-raised-button type="button" color="accent" (click)="finishVerticalStepper()">
+                                Fertig
+                            </button>
+                        </div>
                     </div>
 
-                    <div class="pt-24" fxLayout="row" fxLayoutAlign="start start">
-                        <button class="mr-8" mat-raised-button type="button" color="accent">
-                            Abbrechen
-                        </button>
-                        <button class="mr-8" mat-raised-button matStepperPrevious type="button" color="accent">
-                            Zurück
-                        </button>
-                        <button mat-raised-button type="button" color="accent" (click)="finishVerticalStepper()">
-                            Fertig
-                        </button>
+                    <div *ngIf="displayFinishedLoadingCircle" style="height: 200px">
+
+                        <div fxLayout="column" fxLayoutAlign="space-between center">
+                            <div></div>
+
+                            <mat-spinner></mat-spinner>
+                            
+                            <div></div>
+
+                        </div>
+                            
                     </div>
+
 
                 </mat-step>
 
