--- a/src/app/main/tasks-finished/tasks-finished.component.html
+++ b/src/app/main/tasks-finished/tasks-finished.component.html
@@ -44,7 +44,7 @@
                     </div>
                 </button>
                 <mat-menu #newMenu="matMenu" xPosition="after" yPosition="below" [overlapTrigger]="false">
-                    <button mat-menu-item routerLink="/task/add">Neu</button>
+                    <button mat-menu-item routerLink="/task/add">neu Erstellen</button>
                     <button mat-menu-item>aus Vorlage</button>
                 </mat-menu>
             </div>
