--- a/src/app/main/verify-competence/verify-competence.component.scss
+++ b/src/app/main/verify-competence/verify-competence.component.scss
@@ -49,9 +49,11 @@ $custom-typography: mat-typography-config(
         flex: 0 0 100px;
     }
 
-    .mat-column-name {
-        font-size: 20px;
+    .mat-column-verifiedStatus {
+        flex: 0 0 100px;
     }
+
+
 
 
 }
