polish and fine-tuning

--- a/src/app/main/add-task/add-task.component.html
+++ b/src/app/main/add-task/add-task.component.html
@@ -103,10 +103,10 @@
                         
 
                         <div class="pt-24" fxLayout="row" fxLayoutAlign="start start">
-                            <button class="mr-8" mat-raised-button type="button" color="accent">
+                            <button class="mr-8" mat-stroked-button type="button" color="primary">
                                 Abbrechen
                             </button>
-                            <button mat-raised-button matStepperNext type="button" color="accent">
+                            <button mat-raised-button matStepperNext type="button" color="primary">
                                 Weiter
                             </button>
                         </div>
@@ -204,13 +204,13 @@
                         
 
                         <div class="pt-24" fxLayout="row" fxLayoutAlign="start start">
-                            <button class="mr-8" mat-raised-button type="button" color="accent">
+                            <button class="mr-8" mat-stroked-button type="button" color="primary">
                                 Abbrechen
                             </button>
-                            <button class="mr-8" mat-raised-button matStepperPrevious type="button" color="accent">
+                            <button class="mr-8" mat-stroked-button matStepperPrevious type="button" color="primary">
                                 Zurück
                             </button>
-                            <button mat-raised-button matStepperNext type="button" color="accent" (click)="resetAbleitungStates()">
+                            <button mat-raised-button matStepperNext type="button" color="primary" (click)="resetAbleitungStates()">
                                 Weiter
                             </button>
                         </div>
@@ -245,7 +245,7 @@
                             </div>
      
                             <div fxFlex="47" style="padding-top: 5px">
-                                <button class="mr-8" mat-flat-button type="button" color="accent" style="width: 100%; height: 68%;" (click)="ableiten()" >
+                                <button class="mr-8" mat-flat-button type="button" color="primary" style="width: 100%; height: 68%;" (click)="ableiten()" >
                                     Ableiten
                                 </button>
                             </div>
@@ -253,13 +253,13 @@
                         </div>
 
                         <div class="pt-24" fxLayout="row" fxLayoutAlign="start start">
-                            <button class="mr-8" mat-raised-button type="button" color="accent">
+                            <button class="mr-8" mat-stroked-button type="button" color="primary">
                                 Abbrechen
                             </button>
-                            <button class="mr-8" mat-raised-button matStepperPrevious type="button" color="accent">
+                            <button class="mr-8" mat-stroked-button matStepperPrevious type="button" color="primary">
                                 Zurück
                             </button>
-                            <button mat-raised-button matStepperNext type="button" color="accent" disabled>
+                            <button mat-raised-button matStepperNext type="button" color="primary" disabled>
                                 Weiter
                             </button>
                         </div>
@@ -358,13 +358,13 @@
                         </div>
 
                         <div class="pt-24" fxLayout="row" fxLayoutAlign="start start">
-                            <button class="mr-8" mat-raised-button type="button" color="accent"  (click)="resetAbleitungStates()">
+                            <button class="mr-8" mat-stroked-button type="button" color="primary"  (click)="resetAbleitungStates()">
                                 Abbrechen
                             </button>
-                            <button class="mr-8" mat-raised-button matStepperPrevious type="button" color="accent">
+                            <button class="mr-8" mat-stroked-button matStepperPrevious type="button" color="primary">
                                 Zurück
                             </button>
-                            <button mat-raised-button matStepperNext type="button" color="accent" >
+                            <button mat-raised-button matStepperNext type="button" color="primary" >
                                 Weiter
                             </button>
                         </div>
@@ -384,13 +384,13 @@
                         </div>
 
                         <div class="pt-24" fxLayout="row" fxLayoutAlign="start start">
-                            <button class="mr-8" mat-raised-button type="button" color="accent">
+                            <button class="mr-8" mat-stroked-button type="button" color="primary">
                                 Abbrechen
                             </button>
-                            <button class="mr-8" mat-raised-button matStepperPrevious type="button" color="accent">
+                            <button class="mr-8" mat-stroked-button matStepperPrevious type="button" color="primary">
                                 Zurück
                             </button>
-                            <button mat-raised-button type="button" color="accent" (click)="finishVerticalStepper()">
+                            <button mat-raised-button type="button" color="primary" (click)="finishVerticalStepper()">
                                 Fertig
                             </button>
                         </div>
