--- a/src/app/main/verify-competence/fake-uploader.html
+++ b/src/app/main/verify-competence/fake-uploader.html
@@ -1,3 +1,5 @@
+<link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli|Roboto:300,400,500,700|Google+Sans">
+
 <h1 mat-dialog-title> Datei hochladen</h1>
 <div mat-dialog-content>
    
