--- a/src/app/main/tasks-finished/tasks-finished.component.html
+++ b/src/app/main/tasks-finished/tasks-finished.component.html
@@ -1,8 +1,11 @@
 <!-- <link href="https://fonts.googleapis.com/css?family=Noto+Sans+HK" rel="stylesheet"> -->
 
-<link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli|Roboto:300,400,500,700|Google+Sans">
+<link type="text/css" rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Muli|Roboto:300,400,500,700|Google+Sans">
 
 <div class="page-layout blank p-24" fusePerfectScrollbar>
+
+        
 
     <div class="header mat-accent-bg p-16 p-sm-24" fxLayout="column" fxLayoutAlign="center center">
         <h1>Aufgaben</h1>
@@ -10,37 +13,150 @@
 
     <br>
 
+    <!-- <div fxLayout="row" fxLayoutAlign="start center">
+
+        <div *ngIf="fadedIn"
+            style="background-color: lightgreen; width: 100%; padding-bottom: 2px; padding-top: 2px; outline-color: green; outline-style: solid; outline-width: 1px">
+            <div style="color: green; font-size: 15px; text-align: center">Aufgabe '{{insertedTaskName}}' hinzugefügt</div>
+        </div>
+
+    </div> -->
+
     <div>
-        <div fxLayout="row" fxLayoutAlign="space-evenly center">
-            <img src="../../../assets/images/placeholders/400x400.jpg">
-            <img src="../../../assets/images/placeholders/400x400.jpg">
-            <img src="../../../assets/images/placeholders/400x400.jpg">
+        <div fxLayout="row" fxLayoutAlign="space-around center">
+
+            <fuse-widget class="widget" fxLayout="column" fxFlex="100" fxFlex.gt-xs="50" fxFlex.gt-md="25">
+                <div class="fuse-widget-front mat-white-bg mat-elevation-z2">
+                    <div class="pl-16 pr-8 py-16 h-52" fxLayout="row" fxLayoutAlign="space-between center">
+                        <div class="h3 font-weight-900">{{widget0.title}}</div>
+
+                        <!-- <button mat-icon-button fuseWidgetToggle class="fuse-widget-flip-button"
+                                            aria-label="more">
+                                        <mat-icon>more_vert</mat-icon>
+                                    </button> -->
+                    </div>
+
+                    <div class="pt-8 pb-32" fxLayout="column" fxLayoutAlign="center center">
+                        <div class="green-fg font-size-72 line-height-72">
+                            {{widget0.data.count}}
+                        </div>
+                        <div class="h3 secondary-text font-weight-500">{{widget0.data.label}}
+                        </div>
+                    </div>
+
+                    <div class="p-16 grey-50-bg border-top" fxLayout="row" fxLayoutAlign="start center">
+                        <span class="h4 secondary-text text-truncate">
+                            {{widget0.data.extra.label}}:
+                        </span>
+                        <span class="h4 ml-8">{{widget0.data.extra.count}}</span>
+                    </div>
+                </div>
+            </fuse-widget>
+
+
+
+
+            <fuse-widget class="widget" fxLayout="column" fxFlex="100" fxFlex.gt-xs="50" fxFlex.gt-md="25">
+                <div class="fuse-widget-front mat-white-bg mat-elevation-z2">
+                    <div class="pl-16 pr-8 py-16 h-52" fxLayout="row" fxLayoutAlign="space-between center">
+                        <div class="h3 font-weight-900">{{widget1.title}}</div>
+
+                        <!-- <button mat-icon-button fuseWidgetToggle class="fuse-widget-flip-button"
+                                            aria-label="more">
+                                        <mat-icon>more_vert</mat-icon>
+                                    </button> -->
+                    </div>
+
+                    <div class="pt-8 pb-32" fxLayout="column" fxLayoutAlign="center center">
+                        <div class="grey-fg font-size-72 line-height-72">
+                            {{widget1.data.count}}
+                        </div>
+                        <div class="h3 secondary-text font-weight-500">{{widget1.data.label}}
+                        </div>
+                    </div>
+
+                    <div class="p-16 grey-50-bg border-top" fxLayout="row" fxLayoutAlign="start center">
+                        <span class="h4 secondary-text text-truncate">
+                            {{widget1.data.extra.label}}:
+                        </span>
+                        <span class="h4 ml-8">{{widget1.data.extra.count}}</span>
+                    </div>
+                </div>
+            </fuse-widget>
+
+
+
+            <fuse-widget class="widget" fxLayout="column" fxFlex="100" fxFlex.gt-xs="50" fxFlex.gt-md="25">
+                <div class="fuse-widget-front mat-white-bg mat-elevation-z2">
+                    <div class="pl-16 pr-8 py-16 h-52" fxLayout="row" fxLayoutAlign="space-between center">
+                        <div class="h3 font-weight-900">{{widget2.title}}</div>
+
+                        <!-- <button mat-icon-button fuseWidgetToggle class="fuse-widget-flip-button"
+                                            aria-label="more">
+                                        <mat-icon>more_vert</mat-icon>
+                                    </button> -->
+                    </div>
+
+                    <div class="pt-8 pb-32" fxLayout="column" fxLayoutAlign="center center">
+                        <div class="orange-fg font-size-72 line-height-72">
+                            {{widget2.data.count}}
+                        </div>
+                        <div class="h3 secondary-text font-weight-500">{{widget2.data.label}}
+                        </div>
+                    </div>
+
+                    <div class="p-16 grey-50-bg border-top" fxLayout="row" fxLayoutAlign="start center">
+                        <span class="h4 secondary-text text-truncate">
+                            {{widget2.data.extra.label}}:
+                        </span>
+                        <span class="h4 ml-8">{{widget2.data.extra.count}}</span>
+                    </div>
+                </div>
+            </fuse-widget>
+
+            <fuse-widget class="widget" fxLayout="column" fxFlex="100" fxFlex.gt-xs="50" fxFlex.gt-md="25">
+                <div class="fuse-widget-front mat-white-bg mat-elevation-z2">
+                    <div class="pl-16 pr-8 py-16 h-52" fxLayout="row" fxLayoutAlign="space-between center">
+                        <div class="h3 font-weight-900">{{widget3.title}}</div>
+
+                        <!-- <button mat-icon-button fuseWidgetToggle class="fuse-widget-flip-button"
+                                            aria-label="more">
+                                        <mat-icon>more_vert</mat-icon>
+                                    </button> -->
+                    </div>
+
+                    <div class="pt-8 pb-32" fxLayout="column" fxLayoutAlign="center center">
+                        <div class="red-fg font-size-72 line-height-72">
+                            {{widget3.data.count}}
+                        </div>
+                        <div class="h3 secondary-text font-weight-500">{{widget3.data.label}}
+                        </div>
+                    </div>
+
+                    <div class="p-16 grey-50-bg border-top" fxLayout="row" fxLayoutAlign="start center">
+                        <span class="h4 secondary-text text-truncate">
+                            {{widget3.data.extra.label}}:
+                        </span>
+                        <span class="h4 ml-8">{{widget3.data.extra.count}}</span>
+                    </div>
+                </div>
+            </fuse-widget>
         </div>
 
         <div style="padding-top: 10px"></div>
 
         <div fxLayout="row" fxLayoutAlign="space-between center">
-            <div></div>
-        
-            <div *ngIf="fadedIn" style="background-color: lightgreen; padding-left: 200px; padding-right: 200px; padding-bottom: 2px; padding-top: 2px">
-                <div style="color: green; font-size: 17px">Aufgabe '{{insertedTaskName}}' hinzugefügt</div>
-            </div>
 
-            <div></div>
-        </div>
 
-        <div fxLayout="row" fxLayoutAlign="space-between center">
-
-            
             <h2>Die letzten 5 Aufgaben</h2>
-            
+
 
             <div style="cursor: pointer">
                 <!-- routerLink="/task/add" > -->
                 <button mat-raised-button color="primary" matRipple [matMenuTriggerFor]="newMenu">
                     <div fxLayout="row" fxLayoutAlign="start center">
-                    <mat-icon >add</mat-icon> 
-                    <div> &nbsp; Neue Aufgabe</div>
+                        <mat-icon>add</mat-icon>
+                        <div> &nbsp; Neue Aufgabe</div>
                     </div>
                 </button>
                 <mat-menu #newMenu="matMenu" xPosition="after" yPosition="below" [overlapTrigger]="false">
@@ -49,50 +165,58 @@
                 </mat-menu>
             </div>
 
-            
 
-        </div>  
 
-        <mat-table #table [dataSource]="dataSource" *ngIf="dataSource.data.length != 0">
-            <ng-container matColumnDef="name">
-            <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
-            <mat-cell *matCellDef="let taskTemplate">{{taskTemplate.name}}</mat-cell>
-            </ng-container>
+        </div>
 
-            <ng-container matColumnDef="creator">
-                <mat-header-cell *matHeaderCellDef>Ersteller</mat-header-cell>
-                <mat-cell *matCellDef="let taskTemplate">{{taskTemplate.creator}}</mat-cell>
-            </ng-container>
+        <div fxLayout="row">
 
-            <ng-container matColumnDef="modifiedOn">
-                <mat-header-cell *matHeaderCellDef>Zuletzt Geändert</mat-header-cell>
-                <mat-cell *matCellDef="let taskTemplate">{{taskTemplate.modifiedOn.toLocaleString()}}</mat-cell>
-            </ng-container>
+            <div fxFlex="3"></div> 
 
-            <ng-container matColumnDef="status">
+            <mat-table fxFlex="94" #table [dataSource]="dataSource" *ngIf="dataSource.data.length != 0">
+                <ng-container matColumnDef="name">
+                    <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
+                    <mat-cell *matCellDef="let taskTemplate">{{taskTemplate.name}}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="creator">
+                    <mat-header-cell *matHeaderCellDef>Ersteller</mat-header-cell>
+                    <mat-cell *matCellDef="let taskTemplate">{{taskTemplate.creator}}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="modifiedOn">
+                    <mat-header-cell *matHeaderCellDef>Zuletzt Geändert</mat-header-cell>
+                    <mat-cell *matCellDef="let taskTemplate">{{taskTemplate.modifiedOn.toLocaleString()}}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="status">
                     <mat-header-cell *matHeaderCellDef>Status</mat-header-cell>
                     <mat-cell *matCellDef="let taskTemplate">{{taskTemplate.status}}</mat-cell>
                 </ng-container>
 
-            <ng-container matColumnDef="actions">
-                <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
-                <mat-cell *matCellDef="let taskTemplate">
-                    <mat-icon style="cursor: pointer">edit</mat-icon>
-                </mat-cell>
-            </ng-container>
-        
-            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-        </mat-table>
+                <ng-container matColumnDef="actions">
+                    <mat-header-cell *matHeaderCellDef></mat-header-cell>
+                    <mat-cell *matCellDef="let taskTemplate">
+                        <mat-icon style="cursor: pointer">more_horiz</mat-icon>
+                    </mat-cell>
+                </ng-container>
+
+                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+            </mat-table>
+            
+            <div fxFlex="3"></div>
+
+        </div>
 
         <br>
 
-        <button mat-raised-button style="width: 100%" color="accent">Alle Anzeigen</button>
-        
+        <button mat-stroked-button style="width: 100%" color="primary">Alle Anzeigen</button>
+
         <div class="no-data" *ngIf="dataSource.data.length === 0">
             No Task Templates found!
         </div>
-    </div>   
+    </div>
 
 
 </div>
