--- a/src/app/main/tasks/tasks.component.scss
+++ b/src/app/main/tasks/tasks.component.scss
@@ -1,4 +1,11 @@
 @import "src/@fuse/scss/fuse";
+@import '~@angular/material/theming';
+
+$custom-typography: mat-typography-config(
+  $font-family: 'Muli'
+);
+@include mat-core($custom-typography);
+
 
 .page-layout {
 
@@ -59,36 +66,42 @@
         text-align: center;
       }
 
+    
+
       
 
 }
 
-@import '~@angular/material/theming';
-@include mat-core();
-
-$my-app-primary:  mat-palette($mat-indigo, 900);
-$my-app-accent: mat-palette($mat-indigo, 50);
-
-$my-app-warn:    mat-palette($mat-deep-orange);
-
-$my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
-
-@include angular-material-theme($my-app-theme);
-
-.alternate-theme {
-  $alternate-primary: mat-palette($mat-light-blue);
-  $alternate-accent:  mat-palette($mat-yellow, 200);
-
-  $alternate-theme: mat-light-theme($alternate-primary, $alternate-accent);
-
-  @include angular-material-theme($alternate-theme);
+.mat-column-actions {
+  flex: 0 0 50px;
 }
 
-.cdk-overlay-connected-position-bounding-box {
-  position: absolute;
-  z-index: 1000;
-  display: flex;
-  flex-direction: column;
-  min-width: 1px;
-  min-height: 1px;
-}
+// @import '~@angular/material/theming';
+// @include mat-core();
+
+// $my-app-primary:  mat-palette($mat-indigo, 900);
+// $my-app-accent: mat-palette($mat-indigo, 50);
+
+// $my-app-warn:    mat-palette($mat-deep-orange);
+
+// $my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
+
+// @include angular-material-theme($my-app-theme);
+
+// .alternate-theme {
+//   $alternate-primary: mat-palette($mat-light-blue);
+//   $alternate-accent:  mat-palette($mat-yellow, 200);
+
+//   $alternate-theme: mat-light-theme($alternate-primary, $alternate-accent);
+
+//   @include angular-material-theme($alternate-theme);
+// }
+
+// .cdk-overlay-connected-position-bounding-box {
+//   position: absolute;
+//   z-index: 1000;
+//   display: flex;
+//   flex-direction: column;
+//   min-width: 1px;
+//   min-height: 1px;
+// }
