added config, verification, started dash

--- a/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
+++ b/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
@@ -1,7 +1,8 @@
-<div class="navbar-top mat-indigo-700-bg">
+<div class="navbar-top"> 
+    <!-- mat-grey-100-bg"> -->
 
     <div class="logo">
-        <img class="logo-icon" src="assets/images/logos/fuse.svg">
+        <img class="logo-icon" src="../../../../../../assets/images/logos/logo.png">
         <span class="logo-text secondary-text">iVolunteer</span>
     </div>
 
