--- a/src/@fuse/scss/partials/_navigation.scss
+++ b/src/@fuse/scss/partials/_navigation.scss
@@ -9,6 +9,7 @@
         margin-top: 8px;
         font-size: 12px;
         white-space: nowrap;
+        background: white;
     }
 
     .nav-group {
