--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -1,14 +1,258 @@
-<link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli|Roboto:300,400,500,700|Google+Sans">
-
+<link type="text/css" rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Muli|Roboto:300,400,500,700|Google+Sans">
 
 
 <div class="page-layout blank p-24" fusePerfectScrollbar>
 
-    This is the dashboard page
-  
-    Chart:
+    <div style="padding-top: 12px"></div>
 
-    <div fxLayout="row" fxLayoutAlign="space-around center" > 
+    <div class="header mat-accent-bg p-16 p-sm-24" fxLayout="column" fxLayoutAlign="center center">
+        <h1>Welcome Back, Kati!</h1>
+    </div>
+
+    <br>
+
+    <div fxLayout="row" fxLayoutAlign="space-around center">
+
+        <!-- <fuse-widget class="widget" fxLayout="column" fxFlex="100" fxFlex.gt-xs="50" fxFlex.gt-md="25">
+            <div class="fuse-widget-front mat-white-bg mat-elevation-z2">
+                <div class="pl-16 pr-8 py-16 h-52" fxLayout="row" fxLayoutAlign="space-between center">
+                    <div class="h3 font-weight-900">{{widget0.title}}</div>
+
+                </div>
+
+                <div class="pt-8 pb-32" fxLayout="column" fxLayoutAlign="center center">
+                    <div class="green-fg font-size-72 line-height-72">
+                        {{widget0.data.count}}
+                    </div>
+                    <div class="h3 secondary-text font-weight-500">{{widget0.data.label}}
+                    </div>
+                </div>
+
+                <div class="p-16 grey-50-bg border-top" fxLayout="row" fxLayoutAlign="start center">
+                    <span class="h4 secondary-text text-truncate">
+                        {{widget0.data.extra.label}}:
+                    </span>
+                    <span class="h4 ml-8">{{widget0.data.extra.count}}</span>
+                </div>
+            </div>
+        </fuse-widget>
+
+
+
+
+        <fuse-widget class="widget" fxLayout="column" fxFlex="100" fxFlex.gt-xs="50" fxFlex.gt-md="25">
+            <div class="fuse-widget-front mat-white-bg mat-elevation-z2">
+                <div class="pl-16 pr-8 py-16 h-52" fxLayout="row" fxLayoutAlign="space-between center">
+                    <div class="h3 font-weight-900">{{widget1.title}}</div>
+
+                </div>
+
+                <div class="pt-8 pb-32" fxLayout="column" fxLayoutAlign="center center">
+                    <div class="grey-fg font-size-72 line-height-72">
+                        {{widget1.data.count}}
+                    </div>
+                    <div class="h3 secondary-text font-weight-500">{{widget1.data.label}}
+                    </div>
+                </div>
+
+                <div class="p-16 grey-50-bg border-top" fxLayout="row" fxLayoutAlign="start center">
+                    <span class="h4 secondary-text text-truncate">
+                        {{widget1.data.extra.label}}:
+                    </span>
+                    <span class="h4 ml-8">{{widget1.data.extra.count}}</span>
+                </div>
+            </div>
+        </fuse-widget> -->
+
+
+
+        <fuse-widget class="widget" fxLayout="column" fxFlex="100" fxFlex.gt-xs="50" fxFlex.gt-md="25">
+            <div class="fuse-widget-front mat-white-bg mat-elevation-z2">
+                <div class="pl-16 pr-8 py-16 h-52" fxLayout="row" fxLayoutAlign="space-between center">
+                    <div class="h3 font-weight-900">{{widget2.title}}</div>
+
+                    <!-- <button mat-icon-button fuseWidgetToggle class="fuse-widget-flip-button"
+                                aria-label="more">
+                            <mat-icon>more_vert</mat-icon>
+                        </button> -->
+                </div>
+
+                <div class="pt-8 pb-32" fxLayout="column" fxLayoutAlign="center center">
+                    <div class="red-fg font-size-72 line-height-72">
+                        {{widget2.data.count}}
+                    </div>
+                    <div class="h3 secondary-text font-weight-500">{{widget2.data.label}}
+                    </div>
+                </div>
+
+                <div class="p-16 grey-50-bg border-top" fxLayout="row" fxLayoutAlign="start center">
+                    <span class="h4 secondary-text text-truncate">
+                        {{widget2.data.extra.label}}:
+                    </span>
+                    <span class="h4 ml-8">{{widget2.data.extra.count}}</span>
+                </div>
+            </div>
+        </fuse-widget>
+
+        <fuse-widget class="widget" fxLayout="column" fxFlex="100" fxFlex.gt-xs="50" fxFlex.gt-md="25">
+            <div class="fuse-widget-front mat-white-bg mat-elevation-z2">
+                <div class="pl-16 pr-8 py-16 h-52" fxLayout="row" fxLayoutAlign="space-between center">
+                    <div class="h3 font-weight-900">{{widget3.title}}</div>
+
+                    <!-- <button mat-icon-button fuseWidgetToggle class="fuse-widget-flip-button"
+                                aria-label="more">
+                            <mat-icon>more_vert</mat-icon>
+                        </button> -->
+                </div>
+
+                <div class="pt-8 pb-32" fxLayout="column" fxLayoutAlign="center center">
+                    <div class="red-fg font-size-72 line-height-72">
+                        {{widget3.data.count}}
+                    </div>
+                    <div class="h3 secondary-text font-weight-500">{{widget3.data.label}}
+                    </div>
+                </div>
+
+                <div class="p-16 grey-50-bg border-top" fxLayout="row" fxLayoutAlign="start center">
+                    <span class="h4 secondary-text text-truncate">
+                        {{widget3.data.extra.label}}:
+                    </span>
+                    <span class="h4 ml-8">{{widget3.data.extra.count}}</span>
+                </div>
+            </div>
+        </fuse-widget>
+    </div>
+
+
+
+    <div style="padding-top: 20px">
+        <div fxLayout="row">
+
+            <div fxFlex=3></div>
+
+            <mat-table #table [dataSource]="dataSource" fxFlex=80>
+                <ng-container matColumnDef="engAsset">
+                    <mat-header-cell *matHeaderCellDef>Engagement Asset</mat-header-cell>
+                    <mat-cell *matCellDef="let entry">
+                        {{entry.engAsset}}
+                    </mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="assetType">
+                    <mat-header-cell *matHeaderCellDef>Asset Type</mat-header-cell>
+                    <mat-cell *matCellDef="let entry">
+                        {{entry.assetType}}
+                    </mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="issuer">
+                    <mat-header-cell *matHeaderCellDef>Issuer</mat-header-cell>
+                    <mat-cell *matCellDef="let entry">
+
+                        <img class="avatar" src="../../../assets/images/logos/OERK_Sonderlogo_rgb.jpg">
+                        <div>{{entry.issuer}}</div>
+                    </mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="date">
+                    <mat-header-cell *matHeaderCellDef>Date</mat-header-cell>
+                    <mat-cell *matCellDef="let entry">
+                        {{entry.date}}
+                    </mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="status">
+                    <mat-header-cell *matHeaderCellDef>Status</mat-header-cell>
+                    <mat-cell *matCellDef="let entry">
+                        <mat-icon *ngIf="entry.status=='close'" class="red-fg">{{entry.status}}</mat-icon>
+                        <mat-icon *ngIf="entry.status=='check'" class="green-fg">{{entry.status}}</mat-icon>
+                    </mat-cell>
+                </ng-container>
+
+                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+            </mat-table>
+
+            <div fxFlex></div>
+        </div>
+
+
+    </div>
+
+    <div>
+
+            <h2>Your Pending Tasks</h2>
+    
+            <div fxLayout="row">
+    
+                <div fxFlex="3"></div>
+    
+                <mat-table fxFlex="94" #table [dataSource]="dataSourceTasks" *ngIf="dataSource.data.length != 0">
+                    <ng-container matColumnDef="label">
+                        <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
+                        <mat-cell *matCellDef="let taskTemplate">{{taskTemplate.label}}</mat-cell>
+                    </ng-container>
+    
+                    <ng-container matColumnDef="issuer">
+                        <mat-header-cell *matHeaderCellDef>Ersteller</mat-header-cell>
+                        <mat-cell *matCellDef="let taskTemplate">{{taskTemplate.issuer}}</mat-cell>
+                    </ng-container>
+    
+                    <ng-container matColumnDef="date">
+                        <mat-header-cell *matHeaderCellDef>Zuletzt Geändert</mat-header-cell>
+                        <mat-cell *matCellDef="let taskTemplate">{{taskTemplate.date.toLocaleString()}}</mat-cell>
+                    </ng-container>
+    
+                    <ng-container matColumnDef="status">
+                        <mat-header-cell *matHeaderCellDef>Status</mat-header-cell>
+                        <mat-cell *matCellDef="let taskTemplate">{{taskTemplate.status}}</mat-cell>
+                    </ng-container>
+    
+                    <ng-container matColumnDef="actions">
+                        <mat-header-cell *matHeaderCellDef></mat-header-cell>
+                        <mat-cell *matCellDef="let taskTemplate">
+                            <mat-icon style="cursor: pointer">more_horiz</mat-icon>
+                        </mat-cell>
+                    </ng-container>
+    
+                    <mat-header-row *matHeaderRowDef="displayedColumnsTasks"></mat-header-row>
+                    <mat-row *matRowDef="let row; columns: displayedColumnsTasks;"></mat-row>
+                </mat-table>
+    
+                <div fxFlex="3"></div>
+            </div>
+    
+    
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+    <div style="padding-top: 800px">
+        <button mat-raised-button color="primary" routerLink="/config">Configuration</button>
+        &nbsp;
+        <button mat-raised-button color="primary" routerLink="/recruit">Recruiter View</button>
+        <!-- <button mat-raised-button color="primary" routerLink="/config">Configuration</button> -->
+        <br>
+    </div>
+
+
+
+
+
+    <!-- ignore -->
+    <div fxLayout="row" fxLayoutAlign="space-around center">
+
+
         <canvas #myChart1 width="400" height="400">{{ chart1 }}</canvas>
         <canvas #myChart2 width="400" height="400">{{ chart2 }}</canvas>
 
@@ -47,21 +291,20 @@
     </div>
 
     <br>
-    
-    
+
+
 
     <div fxLayout="row" fxLayoutAlign="space-around center">
 
         <fuse-widget class="widget" fxLayout="column" fxFlex="100" fxFlex.gt-xs="50" fxFlex.gt-md="25">
             <div class="fuse-widget-front mat-white-bg mat-elevation-z2">
-                <div class="pl-16 pr-8 py-16 h-52" fxLayout="row"
-                    fxLayoutAlign="space-between center">
+                <div class="pl-16 pr-8 py-16 h-52" fxLayout="row" fxLayoutAlign="space-between center">
                     <div class="h3 font-weight-900">{{widget0.title}}</div>
 
                     <!-- <button mat-icon-button fuseWidgetToggle class="fuse-widget-flip-button"
-                            aria-label="more">
-                        <mat-icon>more_vert</mat-icon>
-                    </button> -->
+                                aria-label="more">
+                            <mat-icon>more_vert</mat-icon>
+                        </button> -->
                 </div>
 
                 <div class="pt-8 pb-32" fxLayout="column" fxLayoutAlign="center center">
@@ -86,14 +329,13 @@
 
         <fuse-widget class="widget" fxLayout="column" fxFlex="100" fxFlex.gt-xs="50" fxFlex.gt-md="25">
             <div class="fuse-widget-front mat-white-bg mat-elevation-z2">
-                <div class="pl-16 pr-8 py-16 h-52" fxLayout="row"
-                    fxLayoutAlign="space-between center">
+                <div class="pl-16 pr-8 py-16 h-52" fxLayout="row" fxLayoutAlign="space-between center">
                     <div class="h3 font-weight-900">{{widget1.title}}</div>
 
                     <!-- <button mat-icon-button fuseWidgetToggle class="fuse-widget-flip-button"
-                            aria-label="more">
-                        <mat-icon>more_vert</mat-icon>
-                    </button> -->
+                                aria-label="more">
+                            <mat-icon>more_vert</mat-icon>
+                        </button> -->
                 </div>
 
                 <div class="pt-8 pb-32" fxLayout="column" fxLayoutAlign="center center">
@@ -113,18 +355,17 @@
             </div>
         </fuse-widget>
 
-        
+
 
         <fuse-widget class="widget" fxLayout="column" fxFlex="100" fxFlex.gt-xs="50" fxFlex.gt-md="25">
             <div class="fuse-widget-front mat-white-bg mat-elevation-z2">
-                <div class="pl-16 pr-8 py-16 h-52" fxLayout="row"
-                    fxLayoutAlign="space-between center">
+                <div class="pl-16 pr-8 py-16 h-52" fxLayout="row" fxLayoutAlign="space-between center">
                     <div class="h3 font-weight-900">{{widget2.title}}</div>
 
                     <!-- <button mat-icon-button fuseWidgetToggle class="fuse-widget-flip-button"
-                            aria-label="more">
-                        <mat-icon>more_vert</mat-icon>
-                    </button> -->
+                                aria-label="more">
+                            <mat-icon>more_vert</mat-icon>
+                        </button> -->
                 </div>
 
                 <div class="pt-8 pb-32" fxLayout="column" fxLayoutAlign="center center">
@@ -146,14 +387,13 @@
 
         <fuse-widget class="widget" fxLayout="column" fxFlex="100" fxFlex.gt-xs="50" fxFlex.gt-md="25">
             <div class="fuse-widget-front mat-white-bg mat-elevation-z2">
-                <div class="pl-16 pr-8 py-16 h-52" fxLayout="row"
-                    fxLayoutAlign="space-between center">
+                <div class="pl-16 pr-8 py-16 h-52" fxLayout="row" fxLayoutAlign="space-between center">
                     <div class="h3 font-weight-900">{{widget3.title}}</div>
 
                     <!-- <button mat-icon-button fuseWidgetToggle class="fuse-widget-flip-button"
-                            aria-label="more">
-                        <mat-icon>more_vert</mat-icon>
-                    </button> -->
+                                aria-label="more">
+                            <mat-icon>more_vert</mat-icon>
+                        </button> -->
                 </div>
 
                 <div class="pt-8 pb-32" fxLayout="column" fxLayoutAlign="center center">
@@ -174,6 +414,7 @@
         </fuse-widget>
     </div>
 
-    
+    <br>
 
+    
 </div>
