--- a/src/app/main/confirm-task-ff2/confirm-task.component.scss
+++ b/src/app/main/confirm-task-ff2/confirm-task.component.scss
@@ -17,13 +17,15 @@ $custom-typography: mat-typography-config(
         height: 90px;
         max-height: 90px;
         background: red;
+        
+        // outline-color: red;
         // background: linear-gradient(to right, #0E2A3B 0%, #34306B 100%);
-        text-align: center;
+        text-align: start;
 
-        @include media-breakpoint('xs') {
-            height: 240px;
-            padding: 16px;
-        }
+        // @include media-breakpoint('xs') {
+        //     height: 240px;
+        //     padding: 16px;
+        // }
 
 
         h1 {
@@ -31,7 +33,7 @@ $custom-typography: mat-typography-config(
             font-size: 40px;
             font-weight: 300;
             letter-spacing: 0.01em;
-            text-align: center;
+            text-align: start;
             margin-top: 0;
             margin-bottom: 0px;
 
@@ -53,7 +55,6 @@ $custom-typography: mat-typography-config(
         font-size: 20px;
     }
 
- 
 
 
 }
@@ -71,21 +72,10 @@ $my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
 
 @include angular-material-theme($my-app-theme);
 
-::ng-deep .mat-tab-label.mat-tab-label-active {
-    // min-width: 25px !important;
-    // padding: 5px;
-    background-color: mat-color($my-app-primary);
-    opacity: 1 !important;
-    
-    color: white;
-    // font-weight: 700;
-}
 
-::ng-deep .mat-ink-bar {
-  background-color: mat-color($my-app-primary) !important;}
-
-
-
+.mat-spinner-color::ng-deep circle{
+    stroke: mat-color($my-app-primary) !important;
+    }
 
 
 
