--- a/src/app/main/dashboard/dashboard.component.scss
+++ b/src/app/main/dashboard/dashboard.component.scss
@@ -1,6 +1,7 @@
 
 @import "src/@fuse/scss/fuse";
 @import '~@angular/material/theming';
+@include mat-core();
 
 $custom-typography: mat-typography-config(
   $font-family: 'Muli'
@@ -41,17 +42,40 @@ $custom-typography: mat-typography-config(
         }
     }
 
-    .mat-column-actions {
-        flex: 0 0 55px;
-    }
-
-    .mat-column-image {
-        flex: 0 0 100px;
-    }
-
-    // .mat-column-name {
-    //     font-size: 20px;
+    // .mat-column-details {
+    //     flex: 0 0 56px;
     // }
+
+    .mat-column-date1 {
+        font-size: 12px;
+    }
+
+    .mat-column-date2 {
+        font-size: 12px;
+
+    }
+
+    .mat-column-label_competence {
+        padding-left: 3px;
+        flex: 0 0 105px;
+    }
+
+    .mat-column-label_feedback {
+        padding-left: 5px;
+        flex: 0 0 135px;
+    }
+    .mat-column-label_tasks {
+        padding-left: 5px;
+        flex: 0 0 135px;
+    }
+
+    .mat-column-issuer {
+        flex: 0 0 50px;
+    }
+
+    .mat-column-status {
+        flex: 0 0 45px;
+    }
 
     .progressBar {
         height: 8px !important;
@@ -59,8 +83,32 @@ $custom-typography: mat-typography-config(
         margin-right: 20px;
       }
 
+      
 
-}
+
+      .highlighted_new {
+        // background-color: rgb(255, 246, 195);
+        // background-color: rgb(252, 232, 207);
+        // background-color: #FFECB3;
+
+        // background-color: rgb(94, 192, 37);
+        background-color: #008000;
+        font-weight: 800;
+        .mat-cell {
+            color: white;
+        }
+        .a {
+            color: white;
+        }
+
+      }
+
+      
+      .highlighted_increased {
+        background-color: rgb(214, 252, 199);
+      }
+    }
+
 
 ::ng-deep .mat-progress-bar-fill::after {
     background-color: green;
@@ -73,6 +121,48 @@ $custom-typography: mat-typography-config(
 ::ng-deep .mat-expansion-panel-body {
     padding: 0;
 }
+.share-radio-group {
+display: flex;
+  flex-direction: row;
+  margin: 15px 0;
+  margin-right: 10px;
+}
+
+
+// ::ng-deep .mat-ink-bar {
+//   background-color: white !important;}
+
+::ng-deep .mat-tab-label.mat-tab-label-active {
+    // min-width: 25px !important;
+    // padding: 5px;
+    background-color: mat-color($primary);
+    opacity: 1 !important;
+    
+    color: white;
+    // font-weight: 700;
+}
+
+
+// // ::ng-deep .mat-tab-group.mat-primary .mat-ink-bar, .mat-tab-nav-bar.mat-primary .mat-ink-bar{
+// //     background: mat-color($primary);
+// //     height: 35px;
+// //     // border-radius: 100px;
+// //     // margin-bottom: 5px;
+// //     opacity: 1 !important;
+// // }
+
+// ::ng-deep .mat-tab-label {
+//     // min-width: 25px !important;
+//     // padding: 5px;
+//     opacity: 1 !important;
+//     background-color: white;
+//     color: mat-color($accent);
+    
+ 
+    
+    
+//     // font-weight: 700;
+// }
 
 
 
